# llama_ros

./: README.md
llama_bringup/: CMakeLists.txt  package.xml
llama_bringup/launch/: llama2.launch
llama_msgs/: CMakeLists.txt  package.xml
llama_msgs/action/: GenerateResponse.action
llama_msgs/msg/: LogitBiasArray.msg  PartialResponse.msg  Response.msg  SamplingConfig.msg  TokenProbArray.msg
llama_ros/: CMakeLists.txt  package.xml
llama_ros/include/llama_ros/: llama.hpp  llama_node.hpp
llama_ros/launch/: llama_client_node.launch
llama_ros/scripts/: llama_client_node.py
llama_ros/src/: llama_node.cpp
