<?xml version="1.0"?>
<package format="2">
  <name>llama_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for llama_ros</description>
  <!-- <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer> -->
  <maintainer email="">Shunmo17</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>llama_ros</depend>

  <export>
  </export>
</package>
