<?xml version="1.0"?>
<package format="2">
  <name>llama_msgs</name>
  <version>0.0.0</version>
  <description>Msgs for llama_ros</description>
  <!-- <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer> -->
  <maintainer email="">Shunmo17</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
  </export>
</package>