<?xml version="1.0"?>
<package format="2">
  <name>llama_ros</name>
  <version>0.0.0</version>
  <description>llama.cpp for ROS 2</description>
  <!-- <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer> -->
  <maintainer email="">Shunmo17</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>llama_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <export>
  </export>
</package>
